# howrs

./: .gitignore  Cargo.toml  README.md  howrs.spec
.cargo/: config.toml
howrs-vision/: Cargo.toml
howrs-vision/examples/: test_alignment.rs  test_all_ling.rs  test_transform_math.rs
howrs-vision/models/: README.md  download_models.sh
howrs-vision/src/: face.rs  lib.rs  model.rs  pipeline.rs  video.rs  yunet.rs
howrs-vision/test_faces/ir-cam/: README.md
howrs-vision/tests/: actual_alignment.rs  alignment_landmarks.rs  anchor_free_decoding.rs  channel_order.rs  check_landmarks.rs  debug_alignment.rs  debug_landmark_decoding.rs  embedding_debug.rs  face_centering.rs  face_differentiation.rs  face_eval.rs  landmark_mapping.rs  landmark_variance.rs  ling_detections.rs  pipeline_test.rs  transform_debug.rs  visual_comparison.rs  visualize_alignment.rs  visualize_detection_input.rs
packaging/: .gitignore  README.md  build-rpm.sh  build-selinux.sh  build-srpm-fedpkg.sh  config.toml  howrs.spec  howrs_pam.fc  howrs_pam.pp  howrs_pam.te
packaging/tmp/: howrs_pam.tmp
src/: config.rs  identity.rs  lib.rs  main.rs  matcher.rs  pam.rs  storage.rs
store/: config.toml  setup_env.sh
